--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_height="65dp"
         android:background="@color/blue"
         android:gravity="center_vertical|center_horizontal"
-        android:text="Your Personal Wish List"
+        android:text="Wish List"
         android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/RecyclerView"
@@ -46,7 +46,7 @@
         android:layout_marginBottom="16dp"
         android:background="@color/white"
         android:gravity="center_vertical"
-        android:hint="Ex: Https://www.myfavwish.com"
+        android:hint="Ex: https://www.myfavwish.com"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:textColorHint="#999999"
